# hestenes

./: Cargo.toml  README.md
src/: basis_blade.rs  dimension.rs  lib.rs  num.rs  ops.rs  scaled_basis_blade.rs  space.rs  unit_basis_blade.rs
